[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Boss/ball.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BossRock.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 67, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 134, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 67, 67, 67 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 67, 67, 67, 67 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 12.0

[sub_resource type="CircleShape2D" id=8]
radius = 14.0

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 5, -15, 0, 0, 0, 0, 15, -8, 0, 0, 0, 0, 15, 7, 0, 0, 0, 0, 6, 13, 0, 0, 0, 0, -6, 13, 0, 0, 0, 0, -14, 6, 0, 0, 0, 0, -14, -8, 0, 0, 0, 0, -5, -15 )
}

[node name="BossRock" type="KinematicBody2D"]
z_index = 2
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.479189, 0.479189 )
frames = SubResource( 6 )
frame = 1
speed_scale = 1.2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 8 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 9 )

[node name="ghost_tick" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="ghost_tick" to="." method="_on_ghost_tick_timeout"]
